count user post
